--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=MATEUSZ;Initial Catalog=mon8;Integrated Security=True;Pooling=False",
+    "DefaultConnectionString": "Data Source=MATEUSZ;Initial Catalog=bazaprojekt;Integrated Security=True;Pooling=False",
     "PhotoProjectContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PhotoProject;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
